--- a/templates/bvss_working.html
+++ b/templates/bvss_working.html
@@ -244,8 +244,7 @@
         const links = [...bfoLinks, ...inheritanceLinks, ...domainLinks];
 
         // Create SVG with zoom and pan
-        const svg = d3.select(container)
-            .append("svg")
+        const svg = d3.create("svg")
             .attr("width", width)
             .attr("height", height)
             .style("background", "#2d3748")
